--- a/galerij.html
+++ b/galerij.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gizeh-Galerij</title>
+        <title>gizeh-galerij</title>
         <meta charset="utf-8">
-        <meta name="description" content="Deze pagina is de galerij pagina voor je toeristische attracties">
+        <meta name="description" content="geze pagina is de galerij pagina voor je toeristische attracties">
         <meta name="keywords" content="galerij,toeristisch,gizeh">
-        <meta name="author" contect="Ahmetinho">
+        <meta name="author" contect="ahmetinho">
     </head>
     <body>
         <header>
-            <img src="pics/giza.png" width="200" height="100" alt="logo" title="logo"><h1>Piramiden van gizeh</h1>
+            <img src="pics/giza.png" width="200" height="100" alt="logo" title="logo"><h1>piramiden van gizeh</h1>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="galerij.html">Gallery</a>
-                <a href="info.html">Information</a><hr><br>
+                <a href="index.html">home</a>
+                <a href="galerij.html">gallery</a>
+                <a href="info.html">information</a><hr><br>
             </nav>
         </header>
         <section>
             <table border="0">
                 <thead>
                     <tr>
-                        <caption>Gallery</caption>
+                        <caption>gallery</caption>
                     </tr>
                 </thead>
                 <tbody>
