--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gizeh-Home</title>
+        <title>gizeh-home</title>
         <meta charset="utf-8">
         <meta name="description" content="Deze pagina is geschikt voor mensen die toeristische passie hebben">
         <meta name="keywords" content="toeristisce activiteiten, passie, toeristische attracties, piramiden van gizeh">
-        <meta name="author" contect="Ahmetinho">
+        <meta name="author" contect="ahmetinho">
     </head>
     <body>
 <header>
-<img src="pics/giza.png" width="200" height="100" alt="logo" title="logo"><h1>Piramiden van gizeh</h1>
+<img src="pics/giza.png" width="200" height="100" alt="logo" title="logo"><h1>piramiden van gizeh</h1>
 <nav>
-    <a href="index.html">Home</a>
-    <a href="galerij.html">Gallery</a>
-    <a href="info.html">Information</a><hr><br>
+    <a href="index.html">home</a>
+    <a href="galerij.html">gallery</a>
+    <a href="info.html">information</a><hr><br>
 </nav>
 </header>
 <section>
     <article>
-        <blockquote><p>De Piramides van Gizeh, gelegen op het Plateau van Gizeh, zijn een van de zeven wereldwonderen. Deze ontzagwekkende piramides zijn meer dan 4500 jaar oud en werden gebouwd als graftombes voor drie koningen van het Oude Koninkrijk van Egypte. Vandaag de dag zijn de piramides een van de populairste toeristische attracties ter wereld, met meer dan 14 miljoen bezoekers per jaar. Lees verder om meer te weten te komen over de monumentale Piramides van Gizeh.</p>
+        <blockquote><p>de piramiden van gizeh, gelegen op het plateau van gizeh, zijn een van de zeven wereldwonderen. deze ontzagwekkende piramides zijn meer dan 4500 jaar oud en werden gebouwd als graftombes voor drie koningen van het Oude Koninkrijk van Egypte. Vandaag de dag zijn de piramides een van de populairste toeristische attracties ter wereld, met meer dan 14 miljoen bezoekers per jaar. Lees verder om meer te weten te komen over de monumentale Piramides van Gizeh.</p>
         </blockquote> <cite>Pyramids-of-giza.com/nl</cite> </article>
 </section>
 <hr><br>
