--- a/info.html
+++ b/info.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gizeh-Info</title>
+        <title>gizeh-info</title>
         <meta charset="utf-8">
-        <meta name="description" content="Deze pagina is de info pagina voor uw toeristische attracties">
+        <meta name="description" content="deze pagina is de info pagina voor uw toeristische attracties">
         <meta name="keywords" content="informatie,toeristisch,gizeh">
-        <meta name="author" contect="Ahmetinho">
+        <meta name="author" contect="ahmetinho">
     </head>
     <body>
         <header>
-            <img src="pics/giza.png" width="200" height="100" alt="logo" title="logo"><h1>Piramiden van gizeh</h1>
+            <img src="pics/giza.png" width="200" height="100" alt="logo" title="logo"><h1>piramiden van gizeh</h1>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="galerij.html">Gallery</a>
-                <a href="info.html">Information</a><hr><br>
+                <a href="index.html">home</a>
+                <a href="galerij.html">gallery</a>
+                <a href="info.html">information</a><hr><br>
             </nav>
         </header>
         <section>
@@ -21,22 +21,22 @@
             <thead>
                 <tr>
                     <caption>
-                        <h2>Openingstijden</h2>
+                        <h2>openingstijden</h2>
                     </caption>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <th>Maandag t/m Vrijdag</th>
+                    <th>maandag t/m vrijdag</th>
                     <th>09:00-17:00</th>
                 </tr>
                 <tr>
-                    <th>Zaterdag</th>
+                    <th>zaterdag</th>
                     <th>12:00-17:00</th>
                 </tr>
                 <tr>
-                    <th>Zondag</th>
-                    <th>Gesloten</th>
+                    <th>zondag</th>
+                    <th>gesloten</th>
                 </tr>
                 <tr></tr>
             </tbody>
@@ -53,7 +53,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th>Volwassen</th>
+                        <th>volwassen</th>
                         <th>17€</th>
                     </tr>
                     <tr>
@@ -62,7 +62,7 @@
                     </tr>
                     <tr>
                         <th>kinderen onder de 13 jaar</th>
-                        <th>Gratis</th>
+                        <th>gratis</th>
                     </tr>
                     <tr></tr>
                 </tbody>
